src/test/run-pass/typestate-multi-decl.rs
fn main() { let x = 10, y = 20; let z = x + y; assert (z == 30); }
